--- a/sections/image-with-video.liquid
+++ b/sections/image-with-video.liquid
@@ -15,6 +15,12 @@
       </{{ section.settings.size }}>
     {%- endif -%}
 
+    {%- if section.settings.show_description == true -%}
+      <div class="rte">
+        {{ section.settings.description }}
+      </div>
+    {%- endif -%}
+
     <div class="grid-2 middle video-text-{{ section.settings.video_position }}">
       <!-- content -->
       <div class="video-text-content">
@@ -116,6 +122,19 @@
         }
       ],
       "default": "h2"
+    },
+    {
+      "type": "checkbox",
+      "id": "show_description",
+      "label": "Show description",
+      "default": false
+    },
+    {
+      "visible_if": "{{ section.settings.show_description == true }}",
+      "type": "richtext",
+      "id": "description",
+      "label": "Description",
+      "default": "<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias blanditiis libero ut laboriosam. Velit, architecto atque repellat sapiente hic eius eos consequuntur perspiciatis quos. Veritatis eveniet esse minima repellendus!</p>"
     },
     {
       "type": "color",
